--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,8 +1,8 @@
 ---
-import Navigation from "./Navigation.astro";
-
+import Hamburger from "./Hamburger.astro";
+import Navigation from "./NewNav.astro";
 ---
 
 <header>
-    <nav><Navigation /></nav>
+    <nav><Hamburger /><Navigation /></nav>
 </header>
