--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,6 +2,7 @@
 import "../styles/global.css";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
+import BaseLayout from "@layouts/BaseLayout.astro";
 
 const pageTitle = "About Me";
 
@@ -23,28 +24,14 @@ const fontWeight = "bold";
 const textCase = "uppercase";
 ---
 
-<html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-        <meta name="viewport" content="width=device-width" />
-        <meta name="generator" content={Astro.generator} />
-        <title>{pageTitle}</title>
+<BaseLayout pageTitle={pageTitle}>
         <style define:vars={{ skillColor, fontWeight, textCase }}>
-            h1 {
-                color: purple;
-                font-size: 4rem;
-            }
             .skill {
                 color: var(--skillColor);
                 font-weight: var(--fontWeight);
                 text-transform: var(--textCase);
             }
         </style>
-    </head>
-    <body>
-        <Header />
-        <h1>{pageTitle}</h1>
         <h2>... and my new Astro site!</h2>
 
         <p>
@@ -88,6 +75,5 @@ const textCase = "uppercase";
                 <p>My goal is not 3 days.</p>
             )
         }
-        <Footer />
-    </body>
-</html>
+
+    </BaseLayout>
